# Stormspotter

backend/: pyproject.toml  requirements.txt
frontend/: package-lock.json  package.json
stormcollector/: pyproject.toml
